--- a/src/components/character/character.css
+++ b/src/components/character/character.css
@@ -430,8 +430,7 @@ textarea {
     background: lightgray;
 }
 
-.baseCombatStatsShell p, .shieldBlockShell p, .shieldBlockShell input, 
-.statsShell input, .combatSkills p, .combatSkills input {
+.baseCombatStatsShell p, .statsShell input, .combatSkills p, .combatSkills input {
     position: unset !important;
     z-index: 1;
     margin: 0;
@@ -698,41 +697,6 @@ strong {
 
 .armorShieldWeaponArea {
     margin-top: 5px;
-}
-
-.twinShieldStats div {
-    padding: 0;
-    width: 50%;
-}
-
-.twinShieldStats div p, .twinShieldStats div input {
-    width: 50%;
-    text-align: center;
-}
-
-.twinShieldStats div p:first-child, .twinShieldStats div input:first-child {
-    padding-top: 2px;
-    font-family: 'Vollkorn SC', serif;
-    font-weight: bold;
-    text-align: left;
-}
-
-.shieldBlockShell {
-    position: absolute;
-    top: 765px;
-    left: 20px;
-    width: 151px;
-    border: 2px #222 solid;
-}
-
-.shieldnameLocation {
-    padding: 3px 2px 0;
-    background: lightgrey;
-    width: 100%;
-    border-radius: 0;
-    text-align: left;
-    font-size: 12px;
-    width: 100%;
 }
 
 .weaponProfileShell {
