--- a/src/components/character/views/components/pageTwo/blocks/shieldBlock/shieldBlock.css
+++ b/src/components/character/views/components/pageTwo/blocks/shieldBlock/shieldBlock.css
@@ -10,7 +10,7 @@
 }
 
 .shieldnameLocation {
-    padding: 3px 2px 0;
+    padding: 4px 2px 0;
     background: lightgrey;
     width: 100%;
     border-radius: 0;
@@ -34,4 +34,13 @@
     font-family: 'Vollkorn SC', serif;
     font-weight: bold;
     text-align: left;
+}
+
+.calculatedStatsShellShield {
+    display: flex;
+    flex-direction: column;
+}
+
+.calculatedStatsShellShield .calculatedStats:nth-child(even), .shieldBlockShell > div:nth-child(even) {
+    background: lightgray;
 }
