--- a/src/components/character/character.css
+++ b/src/components/character/character.css
@@ -587,12 +587,8 @@ strong {
 }
 
 .generalnotestextArea {
-    position: absolute;
-    top: 23px;
-    width: 815px;
-    max-width: 815px;
-    height: 1033px;
-    max-height: 1033px;
+    width: 100%;
+    height: 985px;
     overflow: hidden;
     white-space: pre-wrap;
 }
