--- a/src/components/character/views/components/pageTwo/skills/skills.css
+++ b/src/components/character/views/components/pageTwo/skills/skills.css
@@ -61,7 +61,11 @@
     z-index: 1;
     margin: 0;
     min-height: 19.6px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
+
 .skillsuiteShell {
     display: flex;
     justify-content: space-between;
@@ -72,6 +76,7 @@
     display: flex;
     justify-content: space-between;
     height: 19.5px;
+    position: relative;
 }
 
 .skillsuiteShell .skillRow:nth-child(odd), .combatRow .skillRow:nth-child(odd) {
