--- a/src/components/character/views/components/pairComponents/editPair.css
+++ b/src/components/character/views/components/pairComponents/editPair.css
@@ -69,43 +69,53 @@
 
 .skillInput {
     padding: 0 4px;
-    width: 150px;
+    width: 55%;
 }
 
-.costInput {
+.costShell {
     padding: 0 4px;
     text-align: left;
-    width: 30px;
+    width: 25%;
     z-index: 1;
 }
 
 .costView {
     padding: 0 4px;
     text-align: center;
-    width: 30px;
+    width: 25%;
 }
 
 .rankInput {
     padding: 0 4px;
     text-align: center;
-    width: 30px;
+    width: 25%;
 }
 
 .modInput {
     padding: 0 4px;
     text-align: center;
-    width: 30px;
+    width: 25%;
+}
+
+.costShell {
+    position: relative;
+}
+
+.costInput  {
+    width: 100%;
 }
 
 #totalCost {
     padding: 0 4px;
     text-align: right;
-    width: 40px;
-    z-index: 0;
+    position: absolute;
+    top: 4px;
+    right: 1px;
+    z-index: -1;
 }
 
-
 #combatTotalCost {
+    position: absolute;
     padding: 0 4px;
     text-align: right;
     width: 40px;
