--- a/src/components/character/character.css
+++ b/src/components/character/character.css
@@ -378,10 +378,13 @@ input, textarea {
 
 textarea {
     font-size: 11px;
+    width: 100%;
+    height: 100%;
 }
 
 .editing input {
     background: rgba(173, 216, 230, 0.50) !important;
+    height: 19.5px;
 }
 
 .viewer input, .viewer textarea {
