--- a/src/components/character/views/components/pageTwo/blocks/weaponBlock/weaponBlock.css
+++ b/src/components/character/views/components/pageTwo/blocks/weaponBlock/weaponBlock.css
@@ -15,12 +15,12 @@
 .weaponBonusArea {
     position: relative;
     width: 100%;
-    height: 62px;
+    height: 73px;
     overflow: hidden;
 }
 
 .weaponBonusArea textarea {
-    height: 61px;
+    height: 100%;
     overflow: hidden;
     text-indent: 40px;
     width: 100%;
