--- a/src/components/character/character.css
+++ b/src/components/character/character.css
@@ -71,7 +71,7 @@ input[type=number] {
 }
 
 .pageOneMiddle {
-    margin-top: 5px;
+    margin-top: 7px;
     display: flex;
     justify-content: space-between;
 }
@@ -169,7 +169,7 @@ input[type=number] {
     background-color: white;
     height: 50px;
     width: 50px;
-    transition: .6s;
+    transition: s;
     border-radius: 25px;
     display: flex;
     justify-content: space-around;
@@ -183,7 +183,7 @@ input[type=number] {
     background-color: white;
     height: 50px;
     width: 50px;
-    transition: .6s;
+    transition: s;
     border-radius: 25px;
     display: flex;
     justify-content: space-around;
@@ -225,7 +225,7 @@ input[type=number] {
 .downloadAsPregen:hover i {
     color: #2192b8;
     ;
-    transition: .6s;
+    transition: s;
     cursor: pointer;
 }
 
@@ -240,7 +240,7 @@ input[type=number] {
     border-bottom-right-radius: 5px;
     border-top-right-radius: 5px;
     overflow: hidden;
-    transition: .6s;
+    transition: s;
 }
 
 .bannerTooltipLeft p {
@@ -264,7 +264,7 @@ input[type=number] {
     border-bottom-left-radius: 5px;
     border-top-left-radius: 5px;
     overflow: hidden;
-    transition: .6s;
+    transition: s;
 }
 
 .singleBanner {
@@ -384,7 +384,7 @@ textarea {
 
 .editing input {
     background: rgba(173, 216, 230, 0.50) !important;
-    height: 19.5px;
+    height: 19px;
 }
 
 .viewer input, .viewer textarea {
@@ -425,7 +425,7 @@ textarea {
     text-align: center;
     font-size: 13px;
     font-family: 'Vollkorn SC', serif;
-    height: 19.6px;
+    height: 19px;
 }
 
 .vitalShell div:nth-child(even) {
@@ -535,8 +535,8 @@ strong {
     padding: 1px;
     border: 1px solid grey;
     background: whitesmoke;
-    width: 19.6px;
-    height: 19.6px;
+    width: 19px;
+    height: 19px;
 }
 
 .general-notes-header {
@@ -581,7 +581,7 @@ strong {
 }
 
 .generalNotesShell div .generalNoteStriping div {
-    height: 19.6px;
+    height: 19px;
 }
 
 .generalNotesShell div .generalNoteStriping div:nth-child(even) {
@@ -627,7 +627,7 @@ strong {
     border: 2px solid #222;
     background: lightgray;
     text-align: center;
-    height: 19.6px;
+    height: 19px;
 }
 
 .carryBackground {
@@ -699,7 +699,7 @@ strong {
     display: flex;
     justify-content: space-between;
     border-top: 2px solid lightgrey;
-    height: 19.6px;
+    height: 19px;
 }
 
 .skilladeptLocation {
@@ -722,7 +722,7 @@ strong {
 }
 
 .advSkillBackgroundShell div .stripings div {
-    height: 19.6px;
+    height: 19px;
     width: 50%;
 }
 
@@ -759,7 +759,7 @@ strong {
 }
 
 .combatSkillRowShell .stripings div {
-    height: 19.6px;
+    height: 19px;
     width: 55%;
 }
 
@@ -835,7 +835,7 @@ strong {
     margin-top: 2px;
     font-size: 16px;
     color: grey;
-    transition: .6s;
+    transition: s;
 }
 
 .fa-rectangle-xmark:hover {
