--- a/src/components/character/views/components/pageOne/weaponSquare/weaponsquare.css
+++ b/src/components/character/views/components/pageOne/weaponSquare/weaponsquare.css
@@ -5,9 +5,13 @@
     align-content: space-between;
 }
 
+.weaponsquare {
+    width: 151px;
+}
+
 .weaponsquare .name {
     height: 20px;
-    width: 158px;
+    width: 154px;
     text-align: left;
     text-overflow: ellipsis;
     white-space: nowrap;
