--- a/src/components/character/views/components/pageOne/weaponSquare/weaponsquare.css
+++ b/src/components/character/views/components/pageOne/weaponSquare/weaponsquare.css
@@ -151,6 +151,7 @@
 .combat-table-column .column p {
     width: 100%;
     text-align: left;
+    height: 15px;
 }
 
 .combat-table-column .column .double {
